function(add_test_exe src_name)
add_executable(${src_name} ${src_name}.cc)
target_link_libraries(${src_name} lsmkv gtest gtest_main)
add_test(NAME ${src_name} COMMAND ${src_name})	
endfunction()

add_test_exe(block_test)
add_test_exe(cache_test)
add_test_exe(coding_test)
add_test_exe(db_test)
add_test_exe(env_test)
add_test_exe(example_test)
add_test_exe(filter_block_test)
add_test_exe(memtable_test)
add_test_exe(sstable_test)
add_test_exe(sstable_write_test)